examples/test/testpolicy10626.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10626
  namespace: namespace396
spec:
  podSelector:
    matchLabels:
      key19: value11
      key40: value26
      key48: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value49
          key38: value25
          key13: value27
